--- a/year8-today.html
+++ b/year8-today.html
@@ -104,7 +104,7 @@
         <div class="dropdown">
             <a href="javascript:void(0)" class="dropdown-btn" onclick="toggleDropdown(this)">Today's<br>questions</a>
             <div class="dropdown-content">
-                <a href="Year7-today.html">Year 7</a>
+                <a href="year7-today.html">Year 7</a>
                 <a href="year8-today.html">Year 8</a>
             </div>
         </div>
