--- a/year8-today.html
+++ b/year8-today.html
@@ -147,7 +147,7 @@
                 { date: '2025-02-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQcTRlnmRueTrZpu2SSyrWfAXpqbq5rrDuhbnzRndY8SH8' },
                 { date: '2025-02-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSsZAp_cwccSKPtRrPYdpHRAXzc-yFwynLUhz5FOIz7esM' },
                 { date: '2025-02-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRyMuFXSNIZToAgXQqdG2sXAeDcp4WKFrNNkD4deYgAmvA' },
-                { date: '2025-02-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTrDEIaOWCwQI6dgmeib69oAQt38h69LTPhT37uSYn3ZWc },
+                { date: '2025-02-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTrDEIaOWCwQI6dgmeib69oAQt38h69LTPhT37uSYn3ZWc' },
                 { date: '2025-02-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS-yG6xiVd4QbrE43SxYaelAaXSvUGHaUsv2Rn26ZS43Y4' }                                          
               ];      
       
