--- a/Year7-today.html
+++ b/Year7-today.html
@@ -176,27 +176,37 @@
 <!-- Green box  -->
 <div class="text-slideshow-container">
     <div class="text-slideshow">
-        <p>Epic Joke of the Day: Why was 6 scared of 7? 7, 8, 9!</p>
-        <p>Why do plants hate maths? Because it gives them square roots</p>
+        <p>How do you organize a math party? You "coordinate" it.</p>
+        <p>Why can’t you trust an algebra teacher? Because they’re always plotting something.</p>
+        <p>How do you make one vanish? Add a G — now it’s gone.</p>
+        <p>I used to think math was useless, but then I realized that decimals have a point.</p>
+        <p>What’s a math teacher’s favorite type of tree? Geome-tree.</p>
+        <p>Why don’t calculators make good friends? They can be a little too calculating.</p>
+        <p>Not all math jokes are bad. Only sum...</p>
+        <p>Why do mathematicians love parks? Because of all the natural logs.</p>
+        <p>Why did the fraction break up? Because it couldn’t handle the numerator’s over-the-top attitude.</p>
+        <p>Parallel lines have so much in common. It’s a shame they’ll never meet.</p>
+        <p>Why do statistics books always look worried? Too many outliers stress them out.</p>
+        <p>Why did the number 4 get kicked out of class? Because it was acting a little too square.</p>
+        <p>What did the zero say to the eight? Nice belt!</p>
+        <p>Why was the function afraid of the derivative? It didn’t want to be reduced to nothing.</p>
+        <p>Why did the mathematician bring a ladder to the bar? To reach a higher degree.</p>
+        <p>Why did seven eat nine? Because you're supposed to eat three squared meals a day!</p>
+        <p>Why did the mathematician refuse to argue? Because they always come to terms.</p>
+        <p>How do you stay warm in any room? Just huddle in the corner — it’s always 90 degrees.</p>
+        <p>Are monsters good at math? Not unless you count Dracula.</p>
+        <p>How does a mathematician plow fields? With a pro-tractor.</p>
+        <p>How do you solve any equation? Multiply both sides by zero.</p>
+        <p>Epic Joke of the Day: Why was 6 scared of 7? Because 7, 8, 9!</p>
+        <p>Why do plants hate math? Because it gives them square roots.</p>
         <p>Why was the equal sign so humble? It knew it wasn’t less than or greater than anyone else.</p>
         <p>Did you know? A 'jiffy' is an actual unit of time.</p>
         <p>Why don’t you ever talk to pi at a party? Because it just goes on and on.</p>
         <p>What did the triangle say to the circle? You’re pointless!</p>
         <p>Why did the student do multiplication problems on the floor? The teacher told him not to use tables.</p>
-        <p>How do you stay warm in any room? Just huddle in the corner — it’s always 90 degrees.</p>
-        <p>Are monsters good at math? Not unless you count Dracula.</p>
-        <p>How does a mathematician plow fields? With a pro-tractor.</p>
-        <p>How do you solve any equation? Multiply both sides by zero.</p>
-        <p>Why did the math book look so sad? It had too many problems.</p>
         <p>Why did the student wear glasses in math class? Because it helped with di-vision.</p>
-        <p>How do you organize a math party? You "coordinate" it.</p>
-        <p>Why can’t you trust an algebra teacher? Because they’re always plotting something.</p>
-        <p>How do you make one vanish? Add a G — now it’s gone.</p>
-        <p>I used to think math was useless, but then I realized that decimals have a point.</p>
-        <p>What’s a math teacher’s favorite type of tree? Geome-tree</p>
-        <p>Why don’t calculators make good friends? They can be a little too calculating.</p>
         <p>Why did the obtuse angle always get in trouble? Because it was never right!</p>
-        <p>Not all maths jokes are bad. Only sum...</p>
+        <p>Why did the math book look so sad? It had too many problems.</p>
         <!-- Add 362 more.... -->
     </div>
 </div>
