--- a/Year7-today.html
+++ b/Year7-today.html
@@ -140,15 +140,15 @@
               // Array of objects with date, time, and corresponding URL
               const schedule = [
                 { date: '2025-02-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT1QPnbUU55T4IBAeUI2MzcAeyAz69iNkhUPyofHrzzoqs' },
-                { date: '2025-02-10', time: '06:59', url: '' },
-                { date: '2025-02-11', time: '06:59', url: 'U' },
-                { date: '2025-02-12', time: '06:59', url: 's' },
-                { date: '2025-02-13', time: '06:59', url: 'h' },
-                { date: '2025-02-14', time: '06:59', url: 'c' },
-                { date: '2025-02-15', time: '06:59', url: 'h' },
-                { date: '2025-02-16', time: '06:59', url: 'hsM' },
-                { date: '2025-02-17', time: '06:59', url: 'A' },
-                { date: '2025-02-18', time: '06:59', url: 'c' }                        
+                { date: '2025-02-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQvshV32FomSKnDjacweStaAcFq2CtnCyUhk5QPrp_pVG8' },
+                { date: '2025-02-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ8OhFhao_SQIux8HHzOqe9AbxICX5LUQpVVcYoGW_a9-c' },
+                { date: '2025-02-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQzbEnkDJhFSJ2tbTlBRyQTAbGPeSlrSX_T50jBrjM6cu0' },
+                { date: '2025-02-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTtu0wOk5B-R5lbQf51ygBWAU8g3eLpIh0jwPbbulywAfg' },
+                { date: '2025-02-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTkTkhpUjpsSJbvvZJNJG4aAVMaiNyXW5VA_1EOsXU5u6A' },
+                { date: '2025-02-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSEuJMhg6aBRJK46hkpJ1wBASsMIpsDBS8fAKZOWPFiz-g' },
+                { date: '2025-02-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQcimVWrJGJQZqjukMQ_4akAdN2Q9rOWWaAkYWGKbLOPCk' },
+                { date: '2025-02-17', time: '06:59', url: 'n/a' },
+                { date: '2025-02-18', time: '06:59', url: 'n/a' }                        
               ];
       
               function updateIframeSrc() {
