--- a/year8-today.html
+++ b/year8-today.html
@@ -140,15 +140,15 @@
             
               const schedule = [
                 { date: '2025-02-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS-yG6xiVd4QbrE43SxYaelAaXSvUGHaUsv2Rn26ZS43Y4' },
-                { date: '2025-02-10', time: '06:59', url: '' },
-                { date: '2025-02-11', time: '06:59', url: 'U' },
-                { date: '2025-02-12', time: '06:59', url: 's' },
-                { date: '2025-02-13', time: '06:59', url: 'h' },
-                { date: '2025-02-14', time: '06:59', url: 'c' },
-                { date: '2025-02-15', time: '06:59', url: 'h' },
-                { date: '2025-02-16', time: '06:59', url: 'hsM' },
-                { date: '2025-02-17', time: '06:59', url: 'A' },
-                { date: '2025-02-18', time: '06:59', url: 'c' }                                        
+                { date: '2025-02-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT8IUPMh3z2S46sy7u2gRTxARhlWWWqNd6sgZuw3aLZ6BU' },
+                { date: '2025-02-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT8k6244jwmTIFwWN0klcgIAYekwpREYpbTGrLf8SawuNk' },
+                { date: '2025-02-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRRxs6PMyFQSpo3GhIzQNuaARLCwCRkJgoY5EuHQNKNxK8' },
+                { date: '2025-02-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQg8yIT4cf3T6mvOIFPjA-YAW9kf89FVnqnuREVg2a2Og0' },
+                { date: '2025-02-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR0ON8NGbf7QJ5_KJ6G0MTlAWCi8hyHUyC7gbGPHSWd9RE' },
+                { date: '2025-02-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSpTa7W_tVXSLzeUbu8HNsdASotJAYS6XdjjELNaWN2Hn8' },
+                { date: '2025-02-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS6IT90xfj0RrtwWcHMxtjjAUsRCHoxqOLbRUq-wXNKP2M' },
+                { date: '2025-02-17', time: '06:59', url: 'n/a' },
+                { date: '2025-02-18', time: '06:59', url: 'n/a' }                                        
               ];      
       
 function updateIframeSrc() {
