--- a/year8-today.html
+++ b/year8-today.html
@@ -147,8 +147,8 @@
                 { date: '2025-02-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR0ON8NGbf7QJ5_KJ6G0MTlAWCi8hyHUyC7gbGPHSWd9RE' },
                 { date: '2025-02-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSpTa7W_tVXSLzeUbu8HNsdASotJAYS6XdjjELNaWN2Hn8' },
                 { date: '2025-02-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS6IT90xfj0RrtwWcHMxtjjAUsRCHoxqOLbRUq-wXNKP2M' },
-                { date: '2025-02-17', time: '06:59', url: 'n/a' },
-                { date: '2025-02-18', time: '06:59', url: 'n/a' }                                        
+                { date: '2025-02-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS7-eWm4k7FSaiiSsBloMScARTaFFkZ8gTM80PFZGkOqA4' },
+                { date: '2025-02-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS4rNx-tlaJSKiQ_fJAUOTTARdU1UzvSXD7pkT8AT6XQ1c' }                                        
               ];      
       
 function updateIframeSrc() {
