--- a/year8-answer.html
+++ b/year8-answer.html
@@ -147,8 +147,8 @@
                 { date: '2025-02-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRV35F-94SkQ7kryDtyW1mSAbwZutcfXuieTqeT1_mRZAY' },
                 { date: '2025-02-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSUpbGxZhtjT5PsbL8YDaPrAejFXOzKSVGeShe9ExYqQao' },
                 { date: '2025-02-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR47LWvMqERSJGQWkqYPuiQARmFglbtffKhzUd99GUJG34' },
-                { date: '2025-02-17', time: '06:59', url: 'n/a' },
-                { date: '2025-02-18', time: '06:59', url: 'n/a' }                       
+                { date: '2025-02-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTwLN7_L2vKT5kZYpmEzE4GAWU0WWlVMFH6i9XP5B7iMDA' },
+                { date: '2025-02-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQBlMr0d4ExS4G5IuRehVHxAZ-QwH9MtYp6JU4ecpwQzrk' }                       
               ];
       
 function updateIframeSrc() {
