--- a/Year7-today.html
+++ b/Year7-today.html
@@ -147,8 +147,8 @@
                 { date: '2025-02-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTkTkhpUjpsSJbvvZJNJG4aAVMaiNyXW5VA_1EOsXU5u6A' },
                 { date: '2025-02-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSEuJMhg6aBRJK46hkpJ1wBASsMIpsDBS8fAKZOWPFiz-g' },
                 { date: '2025-02-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQcimVWrJGJQZqjukMQ_4akAdN2Q9rOWWaAkYWGKbLOPCk' },
-                { date: '2025-02-17', time: '06:59', url: 'n/a' },
-                { date: '2025-02-18', time: '06:59', url: 'n/a' }                        
+                { date: '2025-02-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTWf2DVSqiBS4MHPGTK7tM8AX2m2ddb0n08g1wM95ojWy4' },
+                { date: '2025-02-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSvqNegkh6sQ4GUueUbNA_YAWuZXXY5xNDgOCQyUUcQx5w' }                        
               ];
       
               function updateIframeSrc() {
