--- a/year7-answer.html
+++ b/year7-answer.html
@@ -147,8 +147,8 @@
                 { date: '2025-02-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRih1eMJ8JLRIj2ADXxNBnlAVO5cmZA4v-8Fxczq_btOLo' },
                 { date: '2025-02-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSH3K_eN9ZWQ5cM8MDxMNMXATd8DIGTwFmXnCR0II1-nOA' },
                 { date: '2025-02-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQThYUUiabKBSKXWbgIV2-14AYEh5r2cd_daV9mUrnTAXLw' },
-                { date: '2025-02-17', time: '06:59', url: 'n/a' },
-                { date: '2025-02-18', time: '06:59', url: 'n/a' }           
+                { date: '2025-02-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ1cmbx921HS6EtzfnqVRMOATfk-PtcRpaKUHbIqfdsY8o' },
+                { date: '2025-02-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSXB-qobuEERpXgJFu2XpYWAT9b75klq4uaRpZCaRb-S2M' }           
               ];
       
 function updateIframeSrc() {
