--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,16 +139,16 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2025-02-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT1QPnbUU55T4IBAeUI2MzcAeyAz69iNkhUPyofHrzzoqs' },
-                { date: '2025-02-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQvshV32FomSKnDjacweStaAcFq2CtnCyUhk5QPrp_pVG8' },
-                { date: '2025-02-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ8OhFhao_SQIux8HHzOqe9AbxICX5LUQpVVcYoGW_a9-c' },
-                { date: '2025-02-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQzbEnkDJhFSJ2tbTlBRyQTAbGPeSlrSX_T50jBrjM6cu0' },
-                { date: '2025-02-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTtu0wOk5B-R5lbQf51ygBWAU8g3eLpIh0jwPbbulywAfg' },
-                { date: '2025-02-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTkTkhpUjpsSJbvvZJNJG4aAVMaiNyXW5VA_1EOsXU5u6A' },
-                { date: '2025-02-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSEuJMhg6aBRJK46hkpJ1wBASsMIpsDBS8fAKZOWPFiz-g' },
-                { date: '2025-02-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQcimVWrJGJQZqjukMQ_4akAdN2Q9rOWWaAkYWGKbLOPCk' },
-                { date: '2025-02-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTWf2DVSqiBS4MHPGTK7tM8AX2m2ddb0n08g1wM95ojWy4' },
-                { date: '2025-02-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSvqNegkh6sQ4GUueUbNA_YAWuZXXY5xNDgOCQyUUcQx5w' }                        
+                { date: '2025-02-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSvqNegkh6sQ4GUueUbNA_YAWuZXXY5xNDgOCQyUUcQx5w' },
+                { date: '2025-02-19', time: '06:59', url: 'h' },
+                { date: '2025-02-20', time: '06:59', url: 'ht' },
+                { date: '2025-02-21', time: '06:59', url: 'N/A' },
+                { date: '2025-02-22', time: '06:59', url: 'w' },
+                { date: '2025-02-23', time: '06:59', url: 'o' },
+                { date: '2025-02-24', time: '06:59', url: 'N/A' },
+                { date: '2025-02-25', time: '06:59', url: 'N/A' },
+                { date: '2025-02-26', time: '06:59', url: 'N/A' },
+                { date: '2025-02-27', time: '06:59', url: 'N/A' }                        
               ];
       
               function updateIframeSrc() {
