--- a/year8-today.html
+++ b/year8-today.html
@@ -140,11 +140,11 @@
             
               const schedule = [
                 { date: '2025-02-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS4rNx-tlaJSKiQ_fJAUOTTARdU1UzvSXD7pkT8AT6XQ1c' },
-                { date: '2025-02-19', time: '06:59', url: 'h' },
-                { date: '2025-02-20', time: '06:59', url: 'ht' },
-                { date: '2025-02-21', time: '06:59', url: 'N/A' },
-                { date: '2025-02-22', time: '06:59', url: 'w' },
-                { date: '2025-02-23', time: '06:59', url: 'o' },
+                { date: '2025-02-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRTchyDeQxhS6wCMkbioe3DAQ5fIzoPuSWYaLX-5Imc5zI' },
+                { date: '2025-02-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQs85C_tWM-Qqu15JCVc-tpAdMTuc9Q_M8N9P__EexuW1E' },
+                { date: '2025-02-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSBieIDdsFrRZBEdIcW4SemAVZVYc1iFM_fHTxau3Rw980' },
+                { date: '2025-02-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTOkWin8CD0Tok9zl886swxAcOMXpYg9_l8aD_avBf0P-I' },
+                { date: '2025-02-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT3PNfBtdRiS4OvKypyXIPvAdEPtEkSG01GaOwRBRqvpKE' },
                 { date: '2025-02-24', time: '06:59', url: 'N/A' },
                 { date: '2025-02-25', time: '06:59', url: 'N/A' },
                 { date: '2025-02-26', time: '06:59', url: 'N/A' },
