--- a/Year7-today.html
+++ b/Year7-today.html
@@ -140,11 +140,11 @@
               // Array of objects with date, time, and corresponding URL
               const schedule = [
                 { date: '2025-02-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSvqNegkh6sQ4GUueUbNA_YAWuZXXY5xNDgOCQyUUcQx5w' },
-                { date: '2025-02-19', time: '06:59', url: 'h' },
-                { date: '2025-02-20', time: '06:59', url: 'ht' },
-                { date: '2025-02-21', time: '06:59', url: 'N/A' },
-                { date: '2025-02-22', time: '06:59', url: 'w' },
-                { date: '2025-02-23', time: '06:59', url: 'o' },
+                { date: '2025-02-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQXUnOhsXxNQIPaOJvqjNn4AUVGc21F8NlL6Hxk8b9fJz0' },
+                { date: '2025-02-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTgJvpRE9C4T7qGAy94stNKASV32XPwvDyWhdJY-CFDGo4' },
+                { date: '2025-02-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTjcmL9OgMKRIgsaSeuL3GWAa0QowHMucDOr9e2t2gLfEI' },
+                { date: '2025-02-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTd-56ac6U0Sb8m_3zqxk6yAUjawz6JxbNd0tRdv96yMOE' },
+                { date: '2025-02-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS9JHlzM5ZcSKAoVPMgoj_WAaBJGCYtxBbsctvLcLSg4ss' },
                 { date: '2025-02-24', time: '06:59', url: 'N/A' },
                 { date: '2025-02-25', time: '06:59', url: 'N/A' },
                 { date: '2025-02-26', time: '06:59', url: 'N/A' },
