--- a/Year7-today.html
+++ b/Year7-today.html
@@ -145,7 +145,7 @@
                 { date: '2025-02-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTjcmL9OgMKRIgsaSeuL3GWAa0QowHMucDOr9e2t2gLfEI' },
                 { date: '2025-02-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTd-56ac6U0Sb8m_3zqxk6yAUjawz6JxbNd0tRdv96yMOE' },
                 { date: '2025-02-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS9JHlzM5ZcSKAoVPMgoj_WAaBJGCYtxBbsctvLcLSg4ss' },
-                { date: '2025-02-24', time: '06:59', url: 'N/A' },
+                { date: '2025-02-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQKI3cY13h0zQJXOospN4SsFAfF9DqsG87FKT7Sn0uO9Gz4' },
                 { date: '2025-02-25', time: '06:59', url: 'N/A' },
                 { date: '2025-02-26', time: '06:59', url: 'N/A' },
                 { date: '2025-02-27', time: '06:59', url: 'N/A' }                        
