--- a/year7-answer.html
+++ b/year7-answer.html
@@ -140,12 +140,11 @@
               // Array of objects with date, time, and corresponding URL
               const schedule = [                
                 { date: '2025-02-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSXB-qobuEERpXgJFu2XpYWAT9b75klq4uaRpZCaRb-S2M' },
-                { date: '2025-02-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRwX1iM4xejS75Nlgb9cqveAUg77xFwakeGw8Oz9qdgtZo"' },
                 { date: '2025-02-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ2cugwUgwzTK-dby1PGTmaASg_30J0VFLfuLVpr8akzLI' },
                 { date: '2025-02-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSgvCPunumMRJc1-kYxwbLCARjdxKsonygkhok5p90UzgQ' },
                 { date: '2025-02-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT6whg8PYMPTrZ2gVcXwd58AcHAkfCsmXK6IzIOzx-Kq-g' },
                 { date: '2025-02-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTfKU6ZeSTiS4u6J-drCdKYAbavRSeJeLkHVOuSqcmsUnU' },
-                { date: '2025-02-24', time: '06:59', url: 'N/A' },
+                { date: '2025-02-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQICrO-HjTgaQLyQs9fMM6xDAfoSkEQ59kO5elb0he8vxtw' },
                 { date: '2025-02-25', time: '06:59', url: 'N/A' },
                 { date: '2025-02-26', time: '06:59', url: 'N/A' },
                 { date: '2025-02-27', time: '06:59', url: 'N/A' }
