--- a/year8-today.html
+++ b/year8-today.html
@@ -139,14 +139,14 @@
           <script>
             
               const schedule = [
-                { date: '2025-02-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT3PNfBtdRiS4OvKypyXIPvAdEPtEkSG01GaOwRBRqvpKE' },
                 { date: '2025-02-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQLhCcfs5QQNSJ9DptbdPZ4qAedc8HinbsHiRxoramR9TOg' },
                 { date: '2025-02-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQLo75Rwq4PfRZzkWBpZsGyMAcuxDOcvFt3MKTsd3a5t9_w' },
                 { date: '2025-02-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQIDGvU1raE8SrfFgxag97B9ASZ7iOKG8lf2VYsTGZ5yqjY' },
                 { date: '2025-02-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQJu4QrEcM2cRpRy03JLOR9cAQ3J_owUwRuiMF8JsRsyDTk' },
                 { date: '2025-02-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQIqbrctYZeQRIb6as4gDbkRAQiT56UHP1_r8VMO0a2brN4' },
                 { date: '2025-03-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQLR_j5wq5Z4R5qP4j4DM80tAZde7mrDB_VvxVH1I8AbrU4' },
-                { date: '2025-03-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQKTNyXxbv32SoXtefdO5PlHASjEfyM_Q5Nsv4Nhs1DLVZs' }
+                { date: '2025-03-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQKTNyXxbv32SoXtefdO5PlHASjEfyM_Q5Nsv4Nhs1DLVZs' },
+                { date: '2025-03-03', time: '06:59', url: 'N/A' }
               ];      
       
 function updateIframeSrc() {
